@startuml

title __OBJECTS's Class Diagram__\n
    class fr.projava.triangle.Objects.MessageObject {
        - maxLetters : double
        - maxWidth : double
        - minHeight : double
        - minWidth : double
        - msg : String
        + MessageObject()
        - calcHeight()
        - setSizes()
    }


    class fr.projava.triangle.Objects.UserObject {
        + UserObject()
        + getIP()
        + getUser()
        + hasNewMessage()
        + readMessages()
    }

  

  fr.projava.triangle.Objects.MessageObject -up-|> javafx.scene.control.Label
  fr.projava.triangle.Objects.UserObject -up-|> javafx.scene.control.Button
  fr.projava.triangle.Objects.UserObject o-- fr.projava.triangle.Models.User : user


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
